adjust fork values and fix

--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -7,7 +7,8 @@
 # Mac OS X makefile for stronghands
 # Originally by Laszlo Hanyecz (solar@heliacal.net)
 
-CXX=llvm-g++
+CXX=g++
+CC=gcc
 DEPSDIR=/opt/local
 
 INCLUDEPATHS= \
